.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
........S. [ZBX-8243] added log message when the reason for an item being in an unsupported state changes (Juris)
A......... [ZBX-8195] fixed web scenario step validation for httptest.create and httptest.update API methods (Krists)
...G...... [ZBX-6531] fixed memory leak in filesystem discovery on AIX systems (Juris)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
........S. [ZBX-8143] triggers are now committed to the database individually when setting to an unknown state to avoid potential locking between the poller and history syncer (Juris)
.......P.. [ZBX-7968] fixed bug when proxy stopped sending history data if it had more than 1000 unmonitored item values in history table; thanks to Corey Shaw for identifying the issue and providing a patch (wiper)
.......PS. [ZBX-8251] fixed possible crash when trying to get item value from a failed vmware service with log level set to debug (wiper)
........S. [ZBX-8092] added disabled hosts, disabled items and enabled items of disabled hosts to the configuration cache for correct macro expansion in notifications (igors)
........S. [ZBX-8230] changed maintenance status log messages from warning to debug level (Juris)
...G...... [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
........S. [ZBX-8210] fixed crash when attempting to evaluate an eventlog key for items obtained from the value cache (Juris)